--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   toggle_switch: ^2.3.0
   flutter_riverpod: ^3.0.3
   intl: ^0.20.2
+  local_auth: ^2.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
